# UXP1A

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  lindatest  outputer  reader  readlock  writelock  writelock2
lib/include/: Entity.h  FileManager.h  Linda.h  Parser.h  Tuple.h  Utilities.h  file_manager.h  linda.h  parser.h  tuple.h  utilities.h
lib/src/: Entity.cpp  FileManager.cpp  Linda.cpp  Main.cpp  Parser.cpp  Tuple.cpp  Utilities.cpp  file_manager.cpp  linda.cpp  main.cpp  parser.cpp  test.cpp  tuple.cpp  utilities.cpp
lib/src/example/: file.txt  lockf.cpp  readlock2.cpp  sem.txt  semaphores.cpp  write.cpp  writelock.cpp  writelock2  writelock2.cpp
resources/: tuples.csv
src/: main.cpp  readlock.cpp
tests/: CatchTests  FileManagerTest.cpp  LindaMainTest.cpp  ParserTest.cpp  TupleCompareTest.cpp  TupleToCSVTest.cpp
tests/resources/: data.csv  fm_test2.txt  test3.txt  test4.txt
tests/scripts/: reset_workers_space.sh  show_tuple_space.sh  test_all.sh  test_empty_after_input.sh  test_semaphor_queue.sh  test_timeout.sh  test_waiting_for_data.sh
tests/workers/: inputer.cpp  outputer.cpp  reader.cpp
